--- a/MTYD/MainPage.xaml
+++ b/MTYD/MainPage.xaml
@@ -141,6 +141,7 @@
 
             </AbsoluteLayout>
 
+            <!-- Old code -->
                     <!--<StackLayout x:Name="mainSubStack"  Orientation="Horizontal" VerticalOptions="EndAndExpand">
                 <RelativeLayout>
                 <Frame x:Name="NavBar" HasShadow="True" CornerRadius="0" Padding="0,-5,0,10" HeightRequest="65" VerticalOptions="End"  RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width,Factor=1,Constant=0}">
