--- a/MTYD/MainPage.xaml
+++ b/MTYD/MainPage.xaml
@@ -1,9 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="MTYD.MainPage" NavigationPage.HasNavigationBar="False">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="MTYD.MainPage" NavigationPage.HasNavigationBar="False"
+             >
+        <!--<local:CustomEntry Text="In Shared Code" />-->
 
+    <!--<ContentPage.Padding>
+        <OnPlatform x:TypeArguments="Thickness">
+			<On Platform="iOS" Value="0,20,0,0" />
+			<On Platform="Android" Value="0,0,0,0" />
+			<On Platform="UWP" Value="0,0,0,0"/>
+	    </OnPlatform>
+    </ContentPage.Padding>-->
 
     
     <StackLayout x:Name="mainStack">
+
 
             <AbsoluteLayout x:Name="absLayout" BackgroundColor="#000000">
             <Image  AbsoluteLayout.LayoutBounds="1, -15, 2, 1.0"
@@ -14,7 +26,7 @@
                    AbsoluteLayout.LayoutFlags="All"
                    BackgroundColor="Black" Aspect="AspectFill" Opacity="0.5"/>
 
-            <Label x:Name="Heading" Text="NUTRITION&#10;MADE EASY" FontAttributes="Bold" LineHeight="1"
+           <Label x:Name="Heading" Text="NUTRITION&#10;MADE EASY" FontAttributes="Bold" LineHeight="1"
 
 
                    AbsoluteLayout.LayoutBounds="0.5, 0.14"
@@ -34,10 +46,12 @@
 
                 <Frame x:Name="userFrame" Padding="20,10" Margin="0" BackgroundColor="#FFE5B4">
                     
-                   <Entry x:Name="loginUsername" Keyboard="Text" FontAttributes="Bold"
-                   FontSize="16" Placeholder="USERNAME"
-                   HeightRequest="20" WidthRequest="245"
-                   BackgroundColor="#FFE5B4" PlaceholderColor="#B4B4B4"/>
+                   <Entry x:Name="loginUsername" FontAttributes="Bold"
+                   FontSize="16" Placeholder="USERNAME" Keyboard="Default"
+                   HeightRequest="20" WidthRequest="245" 
+                   BackgroundColor="#FFE5B4" PlaceholderColor="#B4B4B4">
+
+                   </Entry>
 
                 </Frame>
 
@@ -50,8 +64,8 @@
                 <Frame x:Name="passFrame" Padding="20,10,35,10" Margin="0" BackgroundColor="#FFE5B4">
                     
                    <Entry x:Name="loginPassword" Keyboard="Text" FontAttributes="Bold"
-                   FontSize="16" Placeholder="PASSWORD" IsPassword="True"
-                   HeightRequest="20" WidthRequest="230"
+                   FontSize="16" Placeholder="PASSWORD" IsPassword="True" 
+                   HeightRequest="20" WidthRequest="230" TextColor="Black"
                    BackgroundColor="#FFE5B4" PlaceholderColor="#B4B4B4"/>
 
                 </Frame>
