--- a/MTYD/ViewModel/UserProfile.xaml
+++ b/MTYD/ViewModel/UserProfile.xaml
@@ -193,7 +193,7 @@
         <Button x:Name= "checkoutButton" BackgroundColor="#FF9E19" Margin="20,0,0,0" HorizontalOptions="Start"
                         Text="CHECKOUT" TextColor="White"  FontAttributes="Bold" FontSize="20"
                         WidthRequest="180" HeightRequest="50" />
-
+        <Button Text="Log Out" Clicked="LogOutClick"></Button>
     </StackLayout>
 </ScrollView>
 
