fixed navigation after pulling from prashant

--- a/MTYD/MainPage.xaml
+++ b/MTYD/MainPage.xaml
@@ -14,6 +14,9 @@
                    AbsoluteLayout.LayoutFlags="All"
                    BackgroundColor="Black" Aspect="AspectFill" Opacity="0.5"/>
 
+            <Button Clicked="Button_Clicked" Text="Click here to see trial main page"
+                    AbsoluteLayout.LayoutBounds="0,0.08" AbsoluteLayout.LayoutFlags="PositionProportional"/>
+
             <Label x:Name="Heading" Text="NUTRITION&#10;MADE EASY" FontAttributes="Bold" LineHeight="1"
 
 
