--- a/MTYD/ViewModel/SubscriptionExperiment.xaml
+++ b/MTYD/ViewModel/SubscriptionExperiment.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="MTYD.ViewModel.SubscriptionPage">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="MTYD.ViewModel.SubscriptionExperiment">
 
-        <ContentPage.Content>
+    <ContentPage.Content>
             <ScrollView>
             <StackLayout x:Name="StackL" BackgroundColor="White">
 
@@ -182,76 +182,7 @@
                 
                 <Label x:Name="spacer3" HeightRequest="4"/>
 
-                <!--<Grid x:Name="ButtonStack3"
-                HorizontalOptions="Center"
-                VerticalOptions="Center">
-
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="16.66*" />
-                        <ColumnDefinition Width="16.66*" />
-                        <ColumnDefinition Width="16.66*" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="16.66*" />
-                    </Grid.RowDefinitions>
-
-                    <Frame HeightRequest="200" WidthRequest="500"></Frame>
-                    
-                    <Button 
-                    x:Name="payOp1"
-                    WidthRequest="70"
-                    HeightRequest="70"
-                    BackgroundColor="#F5F5F5"
-                    BorderColor="Black"
-                    BorderWidth="1"
-                    CornerRadius="40"
-                    HorizontalOptions="Center"
-                    VerticalOptions="Start"
-                    Text=""
-                    TextColor="Black"
-                    Grid.Column="0"
-                    Grid.Row="0"
-                    Margin="0,0,0,10"
-                    Clicked="clickedPayOp1"/>
-
-                    <Button 
-                    x:Name="payOp2"
-                    WidthRequest="70"
-                    HeightRequest="70"
-                    BackgroundColor="#F5F5F5"
-                    BorderColor="Black"
-                    BorderWidth="1"
-                    CornerRadius="40"
-                    HorizontalOptions="Center"
-                    VerticalOptions="Start"
-                    Text=""
-                    TextColor="Black"
-                    Grid.Column="1"
-                    Grid.Row="0"
-                    Margin="0,0,0,10"
-                    Clicked="clickedPayOp2"/>
-
-                    <Button 
-                    x:Name="payOp3"
-                    WidthRequest="70"
-                    HeightRequest="70"
-                    BackgroundColor="#F5F5F5"
-                    BorderColor="Black"
-                    BorderWidth="1"
-                    CornerRadius="40"
-                    HorizontalOptions="Center"
-                    VerticalOptions="Start"
-                    Text=""
-                    TextColor="Black"
-                    Grid.Column="2"
-                    Grid.Row="0"
-                    Margin="0,0,0,10"
-                    Clicked="clickedPayOp3"/>
-
-                </Grid>-->
-
                 
-                <!--<Label Text="Health Investment" FontFamily="CapsRegular" TextColor="Orange" HorizontalOptions="Center" FontSize="Large" Margin="0,10,0,0" FontAttributes="Bold"/>-->
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="16.66*" />
@@ -278,4 +209,5 @@
                 
         </ScrollView>
         </ContentPage.Content>
-    </ContentPage>
+
+</ContentPage>
