--- a/MTYD/ViewModel/SubscriptionExperiment.xaml
+++ b/MTYD/ViewModel/SubscriptionExperiment.xaml
@@ -5,13 +5,162 @@
             <ScrollView>
             <StackLayout x:Name="StackL" BackgroundColor="White">
 
-                <Grid VerticalOptions="Center">
+                <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
+                    
+                    <BoxView x:Name="orangeBox" BackgroundColor="#FF9E19" HorizontalOptions="Fill"/>
+                    <Label x:Name="heading" Text="CHOOSE MEAL PLAN" FontAttributes="Bold" VerticalOptions="End" HorizontalTextAlignment="Center"/>
+                    <ImageButton x:Name="pfp" BackgroundColor="LightGray" VerticalOptions="End" HorizontalOptions="End"/>
+                    <ImageButton x:Name="menu" Source="menu.png" VerticalOptions="End" HorizontalOptions="Start"/>
 
-                    <BoxView x:Name="orangeBox" BackgroundColor="#FF9E19" HorizontalOptions="Fill"/> 
+                </Grid>
 
+                <Button x:Name="backButton" Text="◀  BACK" FontSize="17" FontAttributes="Bold"
+                BackgroundColor="#F59A28" TextColor= "White" HorizontalOptions="Start" Clicked="clickedBack"
+                HeightRequest="49" WidthRequest="120" CornerRadius="25" Margin="10,0,20,-30"/>
+
+                <BoxView Color="Transparent" HeightRequest="25" HorizontalOptions="Fill"/>
+
+                <Grid x:Name="takeoutGrid">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Image x:Name="takeout" Source="takeout.png" Aspect="AspectFit" BackgroundColor="Transparent"
+                           HorizontalOptions="Center" VerticalOptions="Start" Margin="0,0,2,0"/>
+
+                    <StackLayout Grid.Column="1" Spacing="0.3">
+
+                        <Label x:Name="deliveryDays" Text="MEALS DELIVERIES ARE"
+                             FontAttributes="Bold"  BackgroundColor="Transparent" HorizontalTextAlignment="Start"/>
+
+                        <Label x:Name="deliveryDays2" Text="MONDAY, WEDNESDAY, FRIDAY" TextColor="#FF9400"
+                             FontAttributes="Bold"  BackgroundColor="Transparent" HorizontalTextAlignment="Start"/>
+
+                    </StackLayout>
+
+                </Grid>
+
+                <Label x:Name="numMeals" Text="NUMBER OF MEALS PER DELIVERY" HorizontalTextAlignment="Start"
+                       HorizontalOptions="Start" FontAttributes="Bold"/>
+
+                <Grid x:Name="ButtonStack2" HorizontalOptions="Center" VerticalOptions="Center" RowSpacing="20">
+                    <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="16.66*" />
+                    <ColumnDefinition Width="16.66*" />
+                        </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Button x:Name="meals1" HorizontalOptions="Center" VerticalOptions="Center"
+                    BackgroundColor="#FFF0C6" Text="5 MEALS" TextColor="Black" FontAttributes="Bold" FontSize="20"/>
+
+                <Button 
+                    x:Name="meals2"
+                    HorizontalOptions="Center"
+                    BackgroundColor="#FFF0C6"
+                    VerticalOptions="Center"
+                    Text="10 MEALS"
+                    TextColor="Black"
+                    FontAttributes="Bold"
+                    Grid.Column="0"
+                    Grid.Row="1"/>
+
+                <Button 
+                    x:Name="meals3"
+                    HorizontalOptions="Center"
+                    BackgroundColor="#FFF0C6"
+                    VerticalOptions="Center"
+                    Text="15 MEALS"
+                    TextColor="Black"
+                    FontAttributes="Bold"
+                    Grid.Column="1"
+                    Grid.Row="0"/>
+
+                    <Button 
+                    x:Name="meals4"
+                    HorizontalOptions="Center"
+                    BackgroundColor="#FFF0C6"
+                    VerticalOptions="Center"
+                    Text="20 MEALS"
+                    TextColor="Black"
+                    FontAttributes="Bold"
+                    Grid.Column="1"
+                    Grid.Row="1"/>
+                </Grid>
+
+                <Label x:Name="spacer3" HeightRequest="5"/>
+
+                <BoxView x:Name="divider" HeightRequest="1" BackgroundColor="#FFBA00"
+                         Margin="25,0" HorizontalOptions="Fill" VerticalOptions="Center"/>
+
+                <Label x:Name="spacer" HeightRequest="5"/>
+
+                <Label x:Name="prepay" Text="PRE PAY OPTIONS" HorizontalOptions="Start" FontAttributes="Bold"
+                       HorizontalTextAlignment="Start"/>
+
+                <Label x:Name="spacer2" HeightRequest="5"/>
+
+                
+
+                <Grid x:Name="payGrid" ColumnSpacing="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Frame x:Name="payFrame" HorizontalOptions="Fill" Margin="25, 0" CornerRadius="90" Grid.ColumnSpan="3"/>
+
+                    <StackLayout x:Name="payStack1" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="End">
+                        <Label x:Name="payOp1" FontAttributes="Bold" HorizontalTextAlignment="Center" HorizontalOptions="Center" Text="WEEKLY"/>
+
+                        <ImageButton x:Name="payButton1" BorderColor="#FFBA00" BorderWidth="4"
+                                     Source="noDiscount.png" Aspect="AspectFill" HorizontalOptions="Center"/>
+                    </StackLayout>
+                    
+                    <StackLayout x:Name="payStack2" Grid.Column="1" VerticalOptions="Center">
+                    <Label x:Name="payOp2" FontAttributes="Bold" HorizontalTextAlignment="Center" HorizontalOptions="Center" Text="2 WEEKS"/>
+
+                    <ImageButton x:Name="payButton2" BorderColor="#FFBA00" BorderWidth="4" HorizontalOptions="Center" Source="Discount5.png" Aspect="AspectFill"/>
+                    </StackLayout>
+
+                    <StackLayout x:Name="payStack3" Grid.Column="2" VerticalOptions="Center" HorizontalOptions="Start">
+                    <Label x:Name="payOp3" FontAttributes="Bold" HorizontalTextAlignment="Center" HorizontalOptions="Center" Text="4 WEEKS"/>
+
+                    <ImageButton x:Name="payButton3" BorderColor="#FFBA00" BorderWidth="4" Source="Discount10.png" HorizontalOptions="Center"/>
+                    </StackLayout>
+
+                </Grid>
+
+                <Label x:Name="spacer4" HeightRequest="7"/>
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="16.66*" />
+                        <ColumnDefinition Width="16.66*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Frame x:Name="PriceFrame" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center"
+                           VerticalOptions="Center"  Padding="0" HasShadow="False"
+                           BackgroundColor="#FFF0C6">
+                    <Label x:Name="TotalPrice" Text="$ TOTAL" HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold"/>
+                    </Frame>
+                    <Button x:Name= "SignUpButton" Grid.Row="0" Grid.Column="1" BackgroundColor="#FF9400"
+                            Text="PROCEED" TextColor="White" HorizontalOptions="Center" FontAttributes="Bold" VerticalOptions="Center"/>
                 </Grid>
 
                 <!--<AbsoluteLayout>
